# lightweight_epub_merge_tool

./: .gitignore  README.md  merge_epubs.py  merge_epubs_gui.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: deploy-pages.yml  release.yml
legacy/: merge_epubs_gui_tk.py  merge_epubs_gui_v1.py
src/epub_merge_tool/: __init__.py  cli.py  epub_io.py  errors.py  inspect.py  merge.py  models.py  ordering.py  split.py
ts/src/: cli.ts  epub-io.ts  errors.ts  index.ts  inspect.ts  merge.ts  models.ts  ordering.ts  split.ts  utils.ts  xml.ts  zip.ts
web/: index.html  tsconfig.json  vite.config.ts
web/src/: App.tsx  epub-worker.ts  styles.css
