[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight-epub-merge-tool"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []
description = "Strict CLI-first EPUB merge and split tool"

[project.scripts]
epub-merge = "epub_merge_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["epub_merge_tool*"]
